excalidraw to ifthinkythenthinky, ship of thesus-ing 1%

--- a/packages/excalidraw/components/welcome-screen/WelcomeScreen.scss
+++ b/packages/excalidraw/components/welcome-screen/WelcomeScreen.scss
@@ -270,3 +270,10 @@
 
   // ---------------------------------------------------------------------------
 }
+.itti-logo {
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: #51a892; /* Nice green-cyan color */
+  text-align: center;
+  //font-family: 'comicsans', sans-serif;
+}
